# Vector-Vault-DB

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
docs/: concepts.md  cpp-api.md  index.md  installation.md  python-api.md  quickstart.md
include/vectorvault/: collection.hpp  crc64.hpp  distance.hpp  engine.hpp  error.hpp  hnsw_index.hpp  index.hpp  ivf_index.hpp  memory_allocator.hpp  mmap_region.hpp  persistence.hpp  snapshot_format.hpp  span.hpp  types.hpp  version.hpp
src/core/: collection.cpp  crc64.cpp  distance.cpp  engine.cpp  error.cpp  hnsw_index.cpp  ivf_index.cpp  memory_allocator.cpp  mmap_region.cpp  persistence.cpp  version.cpp
src/python/: module.cpp
src/python/vectorvault/: __init__.py
tests/cpp/: CMakeLists.txt  distance_test.cpp  end_to_end_test.cpp  engine_lifecycle_test.cpp  index_query_test.cpp  memory_allocator_test.cpp  persistence_test.cpp  recall_dispatch_test.cpp  record_store_test.cpp  smoke_test.cpp
tests/python/: test_batch_insert.py  test_binding_properties.py  test_binding_units.py  test_end_to_end.py  test_smoke.py
